@@ -3,6 +3,7 @@
 • Add new 'Wall (thumbnails)' view
 • Add icon when item is resumable
 • Fix esthetic appearance
+• Minnor fixes
 
 [B]2.0.3[/B]
 • Add Videolyrics (credits to manfeed)
